<resources>
    <string name="app_name">Student-Mark Handler</string>
    <string name="Parent">Parent</string>
    <string name="Faculty">Faculty</string>
    <string name="Student">Student</string>
    <string name="Faculty_Portal">Faculty Portal</string>
    <string name="Email_ID">Email-ID</string>
    <string name="Password">Password</string>
    <string name="LOGIN">LOGIN</string>
    <string name="Not_yet_created_an_account_Signup">Not yet created an account?Signup</string>
    <string name="Student_Portal">Student Portal</string>
    <string name="Parent_Portal">Parent Portal</string>
    <string name="Phone">Phone</string>
    <string name="Age">Age</string>
    <string name="Password1">Password</string>
    <string name="Staff_ID">Staff-ID</string>
    <string name="Register">Register</string>
    <string name="Name">Name</string>
    <string name="Already_an_existing_user_Login">Already an existing user?Login</string>
    <string name="Reg_no">Reg no</string>
    <string name="Name1">Name</string>
    <string name="Phno">Phno</string>
    <string name="Email1">Email</string>
    <string name="Password2">Password</string>
    <string name="Already_have_an_account_Login">Already have an account?Login</string>
    <string name="REGISTER">REGISTER</string>
    <string name="Forgot_password5">Forgot password</string>
    <string name="Forgot_password6">Forgot password?</string>
    <string name="Forgot_password7">Forgot Password?</string>
    <string name="email2">Email</string>
    <string name="email3">Email</string>
    <string name="name5">Name</string>
    <string name="Your_son_daughter_s_Reg_no">your son/daughter\'s Reg no</string>
    <string name="email4">Email</string>
    <string name="phone4">Phone</string>
    <string name="password3">Password</string>
    <string name="register2">REGISTER</string>
    <string name="already_has_an_account_login">Already has an account?Login</string>
    <string name="Student_Potral">Student Potral</string>
    <string name="home_page_for_faculty_to_update_the_marks">Home page for faculty to update the marks</string>
    <string name="home_page_for_students_to_view_their_marks">Home page for students to view their marks</string>
    <string name="home_page_for_parents_to_view_marks_of_their_son_daughter">Home page for parents to view marks of their son/daughter</string>
    <string name="result1">Result</string>
    <string name="view_results_of_this_year1"><![CDATA[View Results of this Year]]></string>
    <string name="result2">RESULT</string>
    <string name="email_idfor">Email-ID</string>
    <string name="reset_password1">Reset Password</string>
    <string name="Confirm_otp">Confirm OTP</string>
    <string name="Enter_otp">Enter OTP</string>
    <string name="assignment_1">Assignment 1</string>
    <string name="assignment_2">Assignment 2</string>
    <string name="assignment_3">Assignment 3</string>
    <string name="assesment_1">Assesment 1</string>
    <string name="assesment_2">Assesment 2</string>
    <string name="assesment_3">Assesment 3</string>
    <string name="submit1">Submit</string>
    <string name="parent_name">Parent Name</string>
    <string name="title_activity_faculty_main">FacultyMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="student_action">Student Action</string>
    <string name="ecs">ECS</string>
    <string name="sop">SOP</string>
    <string name="cn">CN</string>
    <string name="dsp">DSP</string>
    <string name="sem">SEM</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="average">Average</string>
    <string name="feedback">Feedback</string>
    <string name="enter_regno">Enter Regno</string>
    <string name="getscore">GetScore</string>
    <string name="button">Button</string>
    <string name="feedback_about_students_performance">Feedback about students performance</string>
    <string name="forum">Forum</string>
    <string name="from_eg_xxxx_student_parent_faculty">From:eg(xxxx,Student/Parent/Faculty)</string>
    <string name="type_your_queries_here">Type your queries here</string>
    <string name="post">Post</string>
    <string name="view">VIEW</string>
</resources>
